@@ -1020,6 +1020,15 @@ file contents are present at either of two repositories.
   copies, on remotes in the specified group. For example,
   `--copies=archive:2`
 
+* `--numcopiesneeded=number`
+
+  Matches only files that git-annex believes need the specified number or 
+  more additional copies to be made in order to satisfy their numcopies
+  setting, as configured by the global numcopies setting of the repository.
+
+  Note that for various reasons, including speed, this does not look 
+  at the annex.numcopies .gitattributes settings of files.
+
 * `--inbackend=name`
 
   Matches only files whose content is stored using the specified key-value
