@@ -14,6 +14,9 @@ git-annex (5.20140118) UNRELEASED; urgency=medium
     command is used to set the global number of copies, any annex.numcopies
     git configs will be ignored.
   * assistant: Make the prefs page set the global numcopies.
+  * Add numcopiesneeded preferred content expression.
+  * Client, transfer, incremental backup, and archive repositories
+    now want to get content that does not yet have enough copies.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 18 Jan 2014 11:54:17 -0400
 
